--- a/SPOJ.WPF/SPOJ.WPF.csproj
+++ b/SPOJ.WPF/SPOJ.WPF.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SPOJ.Lib\SPOJ.Lib.csproj" />
   </ItemGroup>
 
